<resources>
    <string name="app_name">Жардам берем</string>
    <string name="terms_and_conditions">Политика конфиденциальности</string>
    <string name="agreeClickRadioButton">Согласен(-на) с Политикой конфиденциальности и Соглашением</string>
    <string name="titleCategories">Главное меню</string>
    <string name="goodName">Сувенир</string>
    <string name="onCheckRadioButton">Please press agree</string>
    <string name="hintProductName">Название</string>
    <string name="hintGoodDescription">Описание вашего товара</string>
    <string name="hintGoodPhoneNumber">Номер телефона</string>
    <string name="foodCategory">Еда</string>
    <string name="closeCategory">Одежда</string>
    <string name="othersCategory">Другое</string>
    <string name="jobCategory">Работа</string>
    <string name="addProductAction">Добавить</string>
    <string name="add_product">Добавить товар</string>
    <string name="add_feedback">Добавить отзыв</string>
    <string name="products">Товары</string>
    <string name="error_sending_data">Данные не отправлены</string>
    <string name="fill_title">Заполните поля для названия</string>
    <string name="fill_description">Заполните поле для описания</string>
    <string name="fill_phone_number">Заполните поле для номера</string>
    <string name="fill_fields">Заполните все поля</string>
    <string name="detailed_product">Подробнее</string>
    <string name="request_setting_permissions">You have disabled some permissions, please enable them in settings</string>
    <string name="we_connect_to_you">Оставьте e-mail или телефонный номер, если хотите чтобы с вами связались</string>
    <string name="check_to_delete">Вы действительно хотите удалить: %s? </string>
    <string name="subtitle_products">Кол-во: %s</string>
    <string name="title_one_str">Оставьте ваш отзыв о приложении</string>
    <string name="yes">Да</string>
    <string name="no">Нет</string>
    <string name="pick_photo_from_camera">Камера</string>
    <string name="pick_photo_from_gallery">Галерея</string>
    <string name="email">Ваше имя или е-mail</string>
    <string name="feedback_hint_str">Ваш запрос или отзыв…</string>
    <string name="check_email">Напишите правильно почтовый адрес</string>
    <string name="delete_product">Удалить</string>
    <string name="testProductName">Джинсы</string>
    <string name="testProductDescription">Отдам даром джинсы. Синие. 44 размер. Носил всего 2 раза.</string>
    <string name="testProductPhoneNumber">0(554)–46–20–04</string>
    <string name="testProductDate">30/05/2018</string>
    <string name="success_delete">Товар удален</string>
    <string name="update_product">Обновить</string>
    <string name="loading">Загружается…</string>
    <string name="success_add">Добавлено</string>
    <string name="search_product">Поиск</string>
    <string name="show_number">Показать номер</string>
    <string name="wrong_response">Что-то пошло не так…</string>
    <string name="there_is_nothing">Пока ничего нет</string>
    <string name="send">Отправить</string>
    <string name="privacy_and_policy_text">
Настоящая Политика конфиденциальности персональных данных (далее – Политика конфиденциальности) действует в отношении всей информации, которую приложение “Жардам берем”,
расположенный на доменном имени адрес магазина, может получить о Пользователе во время использования продуктов проекта “Жардам берем”..
\n1. ОПРЕДЕЛЕНИЕ ТЕРМИНОВ
\n1.1 В настоящей Политике конфиденциальности используются следующие термины:

\n1.1.1. «Персональные данные» - любая информация, относящаяся к прямо или косвенно определенному или определяемому физическому лицу (субъекту персональных данных).
\n1.1.3. «Обработка персональных данных» - любое действие (операция) или совокупность действий (операций), совершаемых с использованием средств автоматизации или без использования таких средств с персональными данными, включая сбор, запись, систематизацию, накопление, хранение, уточнение (обновление, изменение), извлечение, использование, передачу (распространение, предоставление, доступ), обезличивание, блокирование, удаление, уничтожение персональных данных.
\n1.1.4. «Конфиденциальность персональных данных» - обязательное для соблюдения Оператором или иным получившим доступ к персональным данным лицом требование не допускать их распространения без согласия субъекта персональных данных или наличия иного законного основания.
\n1.1.5. «Пользователь продукта “Жардам берем” (Пользователь)» – лицо, имеющее доступ к Сайту, посредством сети Интернет и использующее приложение.

\n2. ОБЩИЕ ПОЛОЖЕНИЯ
\n2.1. Использование Пользователем продукта означает согласие с настоящей Политикой конфиденциальности и условиями обработки персональных данных Пользователя.
\n2.2. В случае несогласия с условиями Политики конфиденциальности Пользователь должен прекратить использование продуктов.
\n2.3.Настоящая Политика конфиденциальности применяется только к продуктам “Жардам берем”. Продукт не контролирует и не несет ответственность за сайты третьих лиц, на которые Пользователь может перейти по ссылкам, доступным на сайте или в приложении.
\n2.4. Администрация сайта не проверяет достоверность персональных данных, предоставляемых Пользователем.


\n3. ПРЕДМЕТ ПОЛИТИКИ КОНФИДЕНЦИАЛЬНОСТИ

\n3.1. Настоящая Политика конфиденциальности устанавливает обязательства Администрации, Администрация продукта “Жардам берем” не несёт ответственности за использование третьими лицами персональных данных, предоставленных пользователем
\n3.2. Персональные данные, разрешённые к обработке в рамках настоящей Политики конфиденциальности, предоставляются Пользователем путём заполнения формы по подаче объявления, которая включает следующие данные:
\n3.2.1. контактный телефон Пользователя;
\n3.3.2. Продукт “Жардам берем” осуществляет сбор статистики об IP-адресах и IMEI-кодах своих посетителей. Данная информация используется с целью выявления и решения технических проблем.

\n4. ЦЕЛИ СБОРА ПЕРСОНАЛЬНОЙ ИНФОРМАЦИИ ПОЛЬЗОВАТЕЛЯ
\n4.1. Персональные данные Пользователя Администрация продукта может использовать в целях:
\n4.1.1. Идентификации Пользователя, зарегистрировавшего свое объявление в продукте;
\n4.1.2. Подтверждения достоверности и полноты персональных данных, предоставленных Пользователем.
\n4.1.3. Предоставления Пользователю эффективной клиентской и технической поддержки при возникновении проблем связанных с использованием продукта.
\n4.1.4. Обеспечение связи между пользователями для успешной договоренности по объявлениям пользователей

\n5. СПОСОБЫ И СРОКИ ОБРАБОТКИ ПЕРСОНАЛЬНОЙ ИНФОРМАЦИИ
\n5.1. Обработка персональных данных Пользователя осуществляется без ограничения срока, любым законным способом, в том числе в информационных системах персональных данных с использованием средств автоматизации или без использования таких средств.
\n5.2. Пользователь соглашается с тем, что Администрация сайта вправе передавать персональные данные третьим лицам, в частности, другим пользователям, через приложение и сайт, исключительно в целях выполнения успешной договоренности между пользователями.
\n5.3. При утрате или разглашении персональных данных Администрация продукта информирует Пользователя об утрате или разглашении персональных данных.
\n5.5. Администрация продукта принимает необходимые организационные и технические меры для защиты персональной информации Пользователя от неправомерного или случайного доступа, уничтожения, изменения, блокирования, копирования, распространения, а также от иных неправомерных действий третьих лиц.

\n6. ОБЯЗАТЕЛЬСТВА СТОРОН
\n6.1. Пользователь обязан:
\n6.1.1. Предоставить информацию о персональных данных, необходимую для пользования продуктом “Жардам берем”.
\n6.1.2. Обновить, дополнить предоставленную информацию о персональных данных в случае изменения данной информации.
\n6.2. Администрация сайта обязана:
\n6.2.1. Использовать полученную информацию исключительно для целей, указанных в п. 4 настоящей Политики конфиденциальности.
\n6.2.2. Принимать меры предосторожности для защиты конфиденциальности персональных данных Пользователя согласно порядку, обычно используемого для защиты такого рода информации в существующем деловом обороте.
\n6.2.3. Осуществить блокирование персональных данных, относящихся к соответствующему Пользователю, с момента обращения или запроса Пользователя или его законного представителя либо уполномоченного органа по защите прав субъектов персональных данных на период проверки, в случае выявления недостоверных персональных данных или неправомерных действий.

\n7. ОТВЕТСТВЕННОСТЬ СТОРОН
\n7.1. В случае утраты или разглашения Конфиденциальной информации Администрация сайта не несёт ответственность, если данная конфиденциальная информация:
\n7.1.1. Стала публичным достоянием до её утраты или разглашения.
\n7.1.2. Была получена от третьей стороны до момента её получения Администрацией сайта.
\n7.1.3. Была разглашена с согласия Пользователя.

\n8. РАЗРЕШЕНИЕ СПОРОВ
\n8.1. До обращения в суд с иском по спорам, возникающим из отношений между Пользователем и Администрацией продукта обязательным является предъявление претензии (письменного предложения о добровольном урегулировании спора).
\n8.2 .Получатель претензии в течение 30 календарных дней со дня получения претензии, письменно уведомляет заявителя претензии о результатах рассмотрения претензии.
\n8.3. При не достижении соглашения спор будет передан на рассмотрение в судебный орган в соответствии с действующим законодательством Кыргызской Республики.
\n8.4. К настоящей Политике конфиденциальности и отношениям между Пользователем и Администрацией продукта применяется действующее законодательство Кыргызской Республики.

\n9. ДОПОЛНИТЕЛЬНЫЕ УСЛОВИЯ
\n9.1. Администрация сайта вправе вносить изменения в настоящую Политику конфиденциальности без согласия Пользователя.
\n9.2. Новая Политика конфиденциальности вступает в силу с момента ее размещения в продукте, если иное не предусмотрено новой редакцией Политики конфиденциальности.
\n9.3. Все предложения или вопросы по настоящей Политике конфиденциальности следует сообщать в администрацию продукта.
\n9.4. Действующая Политика конфиденциальности размещена в приложении продукта “Жардам берем”.
</string>
    <string name="complain">Пожаловаться</string>
    <string name="give_help">Отдам даром</string>
    <string name="need_help">Нужна помощь</string>
    <string name="sos">sos</string>
    <string name="news">Новости</string>
    <string name="action">Акции</string>
    <string name="partners">Партнеры</string>
    <string name="language">Язык</string>
    <string name="feedbacks">Отзывы</string>
    <string name="about_app">О нас</string>
    <string name="food">Еда</string>
    <string name="clothing">Одежда</string>
    <string name="job">Работа</string>
    <string name="other">Другое</string>
    <string name="image">image</string>
    <string name="urgent_help">Срочная помощь!</string>
    <string name="all">Все</string>
    <string name="add">Добавить</string>
    <string name="fail">Не удалось получить данные</string>
    <string name="fail_send">Не удалось отправить данные</string>
    <string-array name="main_menu_spinner">
        <item>@string/give_help</item>
        <item>@string/need_help</item>
    </string-array>
    <string name="city">Выбрать регион</string>
    <string name="naming">Название</string>
    <string name="description">Описание вашего товара</string>
    <string name="phone_number">0(XXX)-YY-YY-YY</string>
    <string name="helpful_info">Полезная информация</string>
    <string name="forum">Форум</string>
    <string name="region">Регион</string>
    <string name="no_internet">Проверьте доступ к интернету</string>
    <string name="ready">Готово</string>
    <string name="ky_lang">Кыргызча</string>
    <string name="ru_lang">Русский</string>
    <string name="lang_choosen">Язык выбран</string>
    <string name="city_choosen">Регион выбран</string>
    <string name="error_empty">Заполните поле</string>
</resources>