<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.product.post_product.NewProductActivity">

    <include layout="@layout/toolbar" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:orientation="vertical"
            >

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/eight_dp_padding"
                android:background="@drawable/border">

                <android.support.v4.view.ViewPager
                    android:id="@+id/viewPagerOfImage"
                    android:layout_width="200dp"
                    android:layout_height="200dp" />
            </LinearLayout>

            <com.viewpagerindicator.CirclePageIndicator
                android:id="@+id/indicator"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="bottom"
                android:padding="10dip"
                app:centered="true"
                app:fillColor="@color/mainText"
                app:pageColor="@color/white"
                app:snap="false" />

            <ImageView
                android:id="@+id/ivAddPhotoProduct"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:src="@drawable/ic_add_photo" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:paddingLeft="@dimen/eight_dp_padding"
                android:text="@string/titleCategories" />

            <Spinner
                android:id="@+id/spinnerCategoriesNewProduct"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="8dp" />

            <EditText
                android:id="@+id/etTitleNewProduct"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/text_sz"
                android:backgroundTint="@color/mainText"
                android:hint="@string/hintProductName"
                android:imeOptions="actionNext"
                android:textColorHint="@color/lightGray" />

            <EditText
                android:id="@+id/etDescriptionNewProduct"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/text_sz"
                android:backgroundTint="@color/mainText"
                android:hint="@string/hintGoodDescription"
                android:imeOptions="actionNext"
                android:textColorHint="@color/lightGray" />

            <EditText
                android:id="@+id/etPhoneNumberNewProduct"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/text_sz"
                android:backgroundTint="@color/mainText"
                android:digits="0123456789+"
                android:hint="@string/hintGoodPhoneNumber"

                android:imeOptions="actionDone"
                android:inputType="phone"
                android:textColorHint="@color/lightGray" />

            <Button
                android:id="@+id/btAddNewProduct"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/text_sz"
                android:layout_marginTop="@dimen/text_sz"
                android:background="@color/mainText"
                android:padding="8dp"
                android:text="@string/add_product"
                android:textColor="@color/white" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>
