<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#E5E5E5">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <include
                android:id="@+id/include"
                layout="@layout/toolbar"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/f_im"
                android:layout_width="0dp"
                android:layout_height="180dp"
                android:layout_marginEnd="2dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="2dp"
                android:layout_marginStart="10dp"
                android:background="@color/lightGray"
                android:src="@drawable/plus"
                android:scaleType="centerCrop"
                app:layout_constraintEnd_toStartOf="@+id/s_im"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/include" />

            <ImageView
                android:id="@+id/s_im"
                android:layout_width="140dp"
                android:layout_height="88dp"
                android:layout_marginBottom="2dp"
                android:layout_marginEnd="10dp"
                android:scaleType="centerCrop"
                android:layout_marginLeft="2dp"
                android:layout_marginRight="10dp"
                android:layout_marginStart="2dp"
                android:background="@color/lightGray"
                android:src="@drawable/plus"
                app:layout_constraintBottom_toTopOf="@+id/t_im"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/f_im"
                app:layout_constraintTop_toTopOf="@+id/f_im" />

            <ImageView
                android:id="@+id/t_im"
                android:layout_width="140dp"
                android:layout_height="88dp"
                android:layout_marginTop="2dp"
                android:background="@color/lightGray"
                android:scaleType="centerCrop"
                android:src="@drawable/plus"
                app:layout_constraintBottom_toBottomOf="@+id/f_im"
                app:layout_constraintEnd_toEndOf="@+id/s_im"
                app:layout_constraintStart_toStartOf="@+id/s_im"
                app:layout_constraintTop_toBottomOf="@+id/s_im" />


            <info.hoang8f.android.segmented.SegmentedGroup xmlns:segmentedgroup="http://schemas.android.com/apk/res-auto"
                android:id="@+id/segmented_group"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:layout_marginEnd="18dp"
                android:layout_marginLeft="18dp"
                android:layout_marginRight="18dp"
                android:layout_marginStart="18dp"
                android:layout_marginTop="20dp"
                android:orientation="horizontal"
                segmentedgroup:layout_constraintEnd_toEndOf="parent"
                segmentedgroup:layout_constraintStart_toStartOf="parent"
                segmentedgroup:layout_constraintTop_toBottomOf="@+id/f_im"
                segmentedgroup:sc_border_width="1dp"
                segmentedgroup:sc_corner_radius="5dp"
                segmentedgroup:sc_tint_color="@color/segmented_tint">

                <RadioButton
                    android:id="@+id/two"
                    style="@style/RadioButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:checked="true"
                    android:text="@string/give_help" />

                <RadioButton
                    android:id="@+id/one"
                    style="@style/RadioButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:text="@string/need_help" />


            </info.hoang8f.android.segmented.SegmentedGroup>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/styleInp"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                app:errorTextAppearance="@style/MyAppTheme.TextInputLayout"
                app:layout_constraintEnd_toEndOf="@+id/segmented_group"
                app:layout_constraintStart_toStartOf="@+id/segmented_group"
                app:layout_constraintTop_toBottomOf="@+id/segmented_group">

                <Spinner
                    android:id="@+id/spinnerCategory"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </android.support.design.widget.TextInputLayout>

            <Spinner
                android:id="@+id/spinnerCity"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                app:layout_constraintEnd_toEndOf="@+id/styleInp"
                app:layout_constraintStart_toStartOf="@+id/styleInp"
                app:layout_constraintTop_toBottomOf="@+id/styleInp" />

            <RelativeLayout
                android:id="@+id/relativeLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="14dp"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/spinnerCity">


                <android.support.design.widget.TextInputLayout
                    android:id="@+id/title_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    app:errorTextAppearance="@style/MyAppTheme.TextInputLayout">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/etTitleNewProduct"
                        style="@style/TextInpSend"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:focusable="true"
                        android:hint="@string/naming"
                        android:imeOptions="actionNext" />
                </android.support.design.widget.TextInputLayout>


                <android.support.design.widget.TextInputLayout
                    android:id="@+id/descrip_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/title_layout"
                    app:errorTextAppearance="@style/MyAppTheme.TextInputLayout">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/etDescriptionNewProduct"
                        style="@style/TextInpSend"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:focusable="true"
                        android:hint="@string/description"
                        android:imeOptions="actionNext" />
                </android.support.design.widget.TextInputLayout>


                <android.support.design.widget.TextInputLayout
                    android:id="@+id/number_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/descrip_layout"
                    app:errorTextAppearance="@style/MyAppTheme.TextInputLayout">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/etPhoneNumberNewProduct"
                        style="@style/TextInpSend"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:focusable="true"
                        android:hint="@string/phone_number"
                        android:imeOptions="actionDone"
                        android:inputType="phone" />
                </android.support.design.widget.TextInputLayout>

            </RelativeLayout>

            <android.support.v7.widget.CardView
                android:id="@+id/btAddNewProduct"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="24dp"
                android:layout_marginEnd="@dimen/size_45"
                android:layout_marginLeft="@dimen/size_45"
                android:layout_marginRight="@dimen/size_45"
                android:layout_marginStart="@dimen/size_45"
                android:layout_marginTop="24dp"
                android:background="@color/mainText"
                android:minHeight="40dp"
                android:text="@string/add"
                android:textColor="@android:color/white"
                app:cardBackgroundColor="@color/addButton"
                app:cardCornerRadius="5dp"
                app:elevation="@dimen/pad_10"
                app:layout_anchorGravity="top|end"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/relativeLayout"
                app:layout_constraintVertical_bias="1.0">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="@string/add"
                    android:textColor="@android:color/white" />
            </android.support.v7.widget.CardView>
        </android.support.constraint.ConstraintLayout>
    </ScrollView>

    <include layout="@layout/navigation_view" />
</android.support.v4.widget.DrawerLayout>